posiGen_FullsendBox/src/objects/Box_Group__c.object
<CustomObject>
    <fields>
        <fullName>BoxGroup_Id__c</fullName>
        <label>BoxGroup Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BoxGroup_Name__c</fullName>
        <label>BoxGroup Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SF_Profile_Id__c</fullName>
        <label>SF Profile Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Box Group</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>BoxGroup_Id__c</columns>
        <columns>BoxGroup_Name__c</columns>
        <columns>SF_Profile_Id__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Box Group Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Box Groups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>